--- a/src/lib/i18n/ru.json
+++ b/src/lib/i18n/ru.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "welcome": "Добро пожаловать",
+    "close": "Закрыть",
     "search": "Поиск",
     "library": "Библиотека",
     "home": "Главная",
@@ -15,7 +16,47 @@
     "showAll": "Показать все",
     "share": "Поделиться",
     "loading": "Загрузка... ",
-    "error": "Произошла ошибка"
+    "error": "Произошла ошибка",
+    "pageUnderConstruction": "Страница в разработке",
+    "comingSoon": "Скоро",
+    "backToHome": "Вернуться на главную страницу",
+    "modal": {
+      "close": "Закрыть модальное окно",
+      "overlay": "Нажмите, чтобы закрыть"
+    }
+  },
+  "other": {
+    "about": {
+      "title": "О приложении",
+      "description": "О приложении"
+    },
+    "accessibility": {
+      "title": "Доступность",
+      "description": "Доступность приложения"
+    },
+    "legal": {
+      "title": "Право",
+      "description": "Право приложения"
+    },
+    "privacy": {
+      "title": "Конфиденциальность",
+      "description": "Конфиденциальность приложения"
+    },
+    "privacyPolicy": {
+      "title": "Политика конфиденциальности",
+      "description": "Политика конфиденциальности приложения"
+    },
+    "cookies": {
+      "title": "Куки",
+      "description": "Куки приложения"
+    }
+  },
+  "error": {
+    "404": {
+      "code": "404",
+      "title": "Страница не найдена",
+      "description": "Страница, которую вы ищете, не существует"
+    }
   },
   "accessibility": {
     "skipToMain": "Перейти к основному контенту",
@@ -31,6 +72,10 @@
   "auth": {
     "login": "Войти",
     "signup": "Регистрация",
+    "modal": {
+      "title": "Попробуйте наш сервис с аккаунтом Spotify",
+      "description": "Зарегистрируйтесь, чтобы слушать неограниченное количество треков и подкастов."
+    },
     "logout": "Выйти",
     "signupWithGoogle": "Зарегистрироваться через Google",
     "signupWithFacebook": "Зарегистрироваться через Facebook",
@@ -65,7 +110,11 @@
     "previous": "Предыдущий",
     "shuffle": "Перемешать",
     "repeat": "Повторить",
-    "volume": "Громкость"
+    "volume": "Громкость",
+    "unknownArtist": "Неизвестный исполнитель",
+    "noTrack": "Нет трека",
+    "noAlbum": "Нет альбома",
+    "noArtist": "Нет исполнителя"
   },
   "playlist": {
     "create": "Создать плейлист",
@@ -84,33 +133,17 @@
       "title": "Найдём подкасты для подписки",
       "description": "Мы будем сообщать вам о новых эпизодах",
       "button": "Просмотреть подкасты"
+    },
+    "playlists": {
+      "title": "Создайте свою первую плейлист",
+      "description": "Это просто, мы поможем вам",
+      "button": "Создать плейлист"
     }
-  },
-  "footer": {
-    "legal": "Правовая информация",
-    "privacyCenter": "Центр конфиденциальности",
-    "privacy": "Политика конфиденциальности",
-    "cookiesSettings": "Настройки файлов cookie",
-    "about": "О рекламе",
-    "accessibility": "Доступность",
-    "cookies": "Файлы cookie"
   },
   "home": {
     "topTracks": "Лучшие треки",
     "popularArtists": "Популярные исполнители",
     "recentAlbums": "Новые альбомы"
-  },
-  "album": {
-    "title": "Альбом",
-    "tracks": "Треки",
-    "releaseDate": "Дата выхода",
-    "duration": "Длительность",
-    "track": {
-      "title": "Название",
-      "duration": "Длительность",
-      "artist": "Исполнитель",
-      "album": "Альбом"
-    }
   },
   "network": {
     "offline": "Вы в автономном режиме",
@@ -123,8 +156,23 @@
     "title": "Вы в автономном режиме",
     "description": "Вы не подключены к интернету. Вы не можете получить доступ к Spotify."
   },
+  "album": {
+    "title": "Альбом",
+    "all": "Альбомы",
+    "tracks": "Треки",
+    "releaseDate": "Дата выхода",
+    "duration": "Длительность",
+    "track": {
+      "title": "Название",
+      "duration": "Длительность",
+      "all": "Все треки",
+      "artist": "Исполнитель",
+      "album": "Альбом"
+    }
+  },
   "group": {
-    "type": "ГРУППА",
+    "type": "Группа",
+    "all": "Группы",
     "featured": "Рекомендуемые группы",
     "new": "Новые группы",
     "recommended": "Рекомендовано для вас",
@@ -137,9 +185,13 @@
     "role": {
       "admin": "Администратор",
       "member": "Участник"
-    }
+    },
+    "artists": "Исполнители",
+    "albums": "Альбомы"
   },
   "artist": {
+    "title": "Исполнитель",
+    "all": "Исполнители",
     "verified": "Подтвержденный исполнитель",
     "monthlyListeners": "ежемесячных слушателей",
     "worldRank": "Мировой рейтинг",
@@ -147,6 +199,10 @@
     "discography": "Дискография",
     "tours": "Туры",
     "follow": "Подписаться",
-    "tickets": "Билеты"
+    "tickets": "Билеты",
+    "topTracks": "Лучшие треки",
+    "relatedArtists": "Похожие исполнители",
+    "biography": "Биография",
+    "about": "О исполнителе"
   }
 }
