--- a/src/lib/i18n/uk.json
+++ b/src/lib/i18n/uk.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "welcome": "Ласкаво просимо",
+    "close": "Закрити",
     "search": "Пошук",
     "library": "Бібліотека",
     "home": "Головна",
@@ -15,7 +16,47 @@
     "showAll": "Показати все",
     "share": "Поділитися",
     "loading": "Завантаження... ",
-    "error": "Виникла помилка"
+    "error": "Виникла помилка",
+    "pageUnderConstruction": "Сторінка в розробці",
+    "comingSoon": "Скоро",
+    "backToHome": "Повернутися на головну",
+    "modal": {
+      "close": "Закрити модальне вікно",
+      "overlay": "Натисніть, щоб закрити"
+    }
+  },
+  "other": {
+    "about": {
+      "title": "Про додаток",
+      "description": "Про додаток"
+    },
+    "accessibility": {
+      "title": "Доступність",
+      "description": "Доступність додатку"
+    },
+    "legal": {
+      "title": "Право",
+      "description": "Право додатку"
+    },
+    "privacy": {
+      "title": "Конфіденційність",
+      "description": "Конфіденційність додатку"
+    },
+    "privacyPolicy": {
+      "title": "Політика конфіденційності",
+      "description": "Політика конфіденційності додатку"
+    },
+    "cookies": {
+      "title": "Куки",
+      "description": "Куки додатку"
+    }
+  },
+  "error": {
+    "404": {
+      "code": "404",
+      "title": "Сторінка не знайдена",
+      "description": "Сторінка, яку ви шукаєте, не існує"
+    }
   },
   "accessibility": {
     "skipToMain": "Перейти до основного контенту",
@@ -31,6 +72,10 @@
   "auth": {
     "login": "Увійти",
     "signup": "Зареєструватися",
+    "modal": {
+      "title": "Спробуйте наш сервіс з обліковим записом Spotify",
+      "description": "Зареєструйтеся, щоб слухати необмежену кількість треків і подкастів."
+    },
     "logout": "Вийти",
     "signupWithGoogle": "Зареєструватися через Google",
     "signupWithFacebook": "Зареєструватися через Facebook",
@@ -65,7 +110,11 @@
     "previous": "Попередній",
     "shuffle": "Перемішати",
     "repeat": "Повторити",
-    "volume": "Гучність"
+    "volume": "Гучність",
+    "unknownArtist": "Невідомий виконавець",
+    "noTrack": "Немає треку",
+    "noAlbum": "Немає альбому",
+    "noArtist": "Немає виконавця"
   },
   "playlist": {
     "create": "Створити плейлист",
@@ -84,33 +133,17 @@
       "title": "Знайдемо подкасти для підписки",
       "description": "Ми повідомлятимемо вас про нові епізоди",
       "button": "Переглянути подкасти"
+    },
+    "playlists": {
+      "title": "Створіть свою першу плейлист",
+      "description": "Це просто, ми допоможемо вам",
+      "button": "Створити плейлист"
     }
-  },
-  "footer": {
-    "legal": "Правова інформація",
-    "privacyCenter": "Центр конфіденційності",
-    "privacy": "Політика конфіденційності",
-    "cookiesSettings": "Налаштування файлів cookie",
-    "about": "Про рекламу",
-    "accessibility": "Доступність",
-    "cookies": "Файли cookie"
   },
   "home": {
     "topTracks": "Найкращі треки",
     "popularArtists": "Популярні виконавці",
     "recentAlbums": "Нові альбоми"
-  },
-  "album": {
-    "title": "Альбом",
-    "tracks": "Треки",
-    "releaseDate": "Дата випуску",
-    "duration": "Тривалість",
-    "track": {
-      "title": "Назва",
-      "duration": "Тривалість",
-      "artist": "Виконавець",
-      "album": "Альбом"
-    }
   },
   "network": {
     "offline": "Ви в автономному режимі",
@@ -123,8 +156,23 @@
     "title": "Ви в автономному режимі",
     "description": "Ви не підключені до інтернету. Ви не можете отримати доступ до Spotify."
   },
+  "album": {
+    "title": "Альбом",
+    "all": "Альбоми",
+    "tracks": "Треки",
+    "releaseDate": "Дата випуску",
+    "duration": "Тривалість",
+    "track": {
+      "title": "Назва",
+      "duration": "Тривалість",
+      "all": "Всі треки",
+      "artist": "Виконавець",
+      "album": "Альбом"
+    }
+  },
   "group": {
-    "type": "ГРУПА",
+    "type": "Група",
+    "all": "Групи",
     "featured": "Рекомендовані групи",
     "new": "Нові групи",
     "recommended": "Рекомендовано для вас",
@@ -137,9 +185,13 @@
     "role": {
       "admin": "Адміністратор",
       "member": "Учасник"
-    }
+    },
+    "artists": "Виконавці",
+    "albums": "Альбоми"
   },
   "artist": {
+    "title": "Виконавець",
+    "all": "Виконавці",
     "verified": "Підтверджений виконавець",
     "monthlyListeners": "щомісячних слухачів",
     "worldRank": "Світовий рейтинг",
@@ -147,6 +199,10 @@
     "discography": "Дискографія",
     "tours": "Тури",
     "follow": "Підписатися",
-    "tickets": "Квитки"
+    "tickets": "Квитки",
+    "topTracks": "Найкращі треки",
+    "relatedArtists": "Схожі виконавці",
+    "biography": "Біографія",
+    "about": "Про виконавця"
   }
 }
